--- a/src/css/style.css
+++ b/src/css/style.css
@@ -691,7 +691,7 @@
 	font-size: 50px;
 	font-weight: bold;
 	line-height: 100px;
-	z-index: 1;
+	z-index: 4;
   }
 
   .main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content {
@@ -852,99 +852,63 @@
 	height: 150px;
 }
 
-
-/** game item, click - before */
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game {
+.main-page-content-box.game {
 	position: relative;
-	margin: 20px;
-	width: 300px;
-	height: 500px;
+
+	overflow: hidden;
+}
+
+.main-page-content-box.game .main-page-content-box-content {
+	width: 100%;
+	height: 100%;
 	
-	transition: 0.2s all;
-	cursor: pointer;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .imgBx {
-	width: 300px;
-	height: 300px;
-}
 
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .imgBx img {
-	width: 300px;
-	height: 500px;
-
-	animation: game-img-animation 3s linear infinite;
-
-	cursor: pointer;
-	transition: 0.2s ease;
-}
-
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .content {
+/** game, video 영역 */
+.main-page-content-box.game .main-page-content-box-content .bg-video__content {
 	position: absolute;
-	bottom: -40px;
 
+	top:0;
+	left:-500px;
 	width: 100%;
-	text-align: center;
-
-	transition: 0.2s ease;
-}
-
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game .content .title {
-	font-size: 20px;
-	font-weight: bold;
-	color: #fff;
+	opacity: 1;
+	mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 50%, transparent 75%);
+	-webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 50%, transparent 75%);
+	z-index: -1;
 }
 
 
-/**  game item, click, after */
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game.action .imgBx img {
-	width: 300px;
-	height: 500px;
+.main-page-content-box.game .main-page-content-box-content .mainPage-content-box.game {
+	position: relative;
+	width: 250px;
+	height: 350px;
 
-	animation: none;
-
-	transform: scale(1.2);
-
-	transition: 2s ease;
+	margin: 20px;
+	cursor: pointer;
+	transition: 0.5s ease-in-out;
 }
 
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game.action .content {
-	position: absolute;
-	bottom: -40px;
-
+.main-page-content-box.game .main-page-content-box-content .imgBx {
 	width: 100%;
-	text-align: right;
-	transition: 1s ease;
+	height: 100%;
 }
 
-.main-container .main-content .main-page .main-page-content .main-page-content-box .main-page-content-box-content .mainPage-content-box.game.action .content .title {
-	font-size: 40px;
-	font-weight: bold;
-	color: var(--black-color);
-	text-shadow: -1px -1px 0 #fff,
-		1px -1px 0 #fff,
-		-1px 1px 0 #fff,
-		1px 1px 0 #fff;
-	transition: 0.5s ease;
+.main-page-content-box.game .main-page-content-box-content .imgBx img {
+	width: 100%;
+	height: 100%;
 }
 
-@keyframes game-img-animation {
-	0% {
-		transform: rotate(0deg);
-	}
-	25% {
-		transform: rotate(15deg);
-	}
-	50% {
-		transform: rotate(0deg);
-	}
-	75% {
-		transform: rotate(-15deg);
-	}
-	100% {
-		transform: rotate(0deg);
-	}
+.main-page-content-box.game .main-page-content-box-content .mainPage-content-box.game:hover {
+	transform: scale(1.8);
+	transition: 0.5s ease-in-out;
+	z-index: 30;
 }
+
 
 
 /** footter 영역 */
